Resolving Security issues related to CORS